@@ -25,10 +25,10 @@ local function UpdateVanillaLevelSetting(self)
     if job and job.chain and job.chain[self._global.current_job.current_stage] then
         local level_id = job.chain[self._global.current_job.current_stage].level_id or ""
         if EHI.ModUtils._restoration_vanilla_levels_bs[level_id] then -- Restoration Mod Overhaul bs
-            Global.game_settings.ehi_vanilla_heist = true
+            Global.EHI_VanillaHeist = true
         else
             local level = tweak_data.levels[level_id] or {}
-            Global.game_settings.ehi_vanilla_heist = not level.custom
+            Global.EHI_VanillaHeist = not level.custom
         end
     end
 end
