@@ -1,3 +1,6 @@
+r354 (04. 11. 2025):
+Fixed Beardlib fix not working as intended
+
 r353 (01. 11. 2025):
 Experience: Fixed nil value in infamy bonus
 
